fix: height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,11 @@ code {
 }
 
 #root{
-  height: 100%;
+  /* https://css-tricks.com/the-trick-to-viewport-units-on-mobile/ */
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
+
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
